<resources>
    <string name="app_name">My Application</string>
    <string name="createAccountMenu">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="create">Create</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="go">GO!</string>
    <string name="createAccount"><u>create account</u></string>
    <string name="button_back">Back</string>
    <string name="routes">Routes</string>
    <string-array name="routes">
        <item>Name1</item>
        <item>Name2</item>
    </string-array>
</resources>