<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background">

    <ImageView
        android:id="@+id/cityImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-97sp"
        app:srcCompat="@drawable/city_image" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="99sp"
        android:layout_marginTop="40sp"
        android:fontFamily="@font/roboto_regular"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="4"
        android:shadowRadius="9"
        android:text="@string/createAccountMenu"
        android:textColor="@color/green_textColor"
        android:textSize="31sp" />

    <ImageView
        android:id="@+id/underText"
        android:layout_width="match_parent"
        android:layout_height="380sp"
        android:layout_marginHorizontal="25sp"
        android:layout_marginTop="125sp"
        app:srcCompat="@drawable/view" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/underText"
        android:layout_marginHorizontal="35sp"
        android:layout_marginTop="-360sp"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/green_textColor"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="35sp"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textColorHint="@color/green_textColor"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname"
        android:layout_marginHorizontal="35sp"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/green_textColor"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="35sp"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColorHint="@color/green_textColor"
        android:textSize="26sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:layout_marginHorizontal="140sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back_to_login"
        android:layout_width="135sp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/green_for_buttonGO"
        android:text="@string/button_back"
        android:textColor="@color/white" />

</RelativeLayout>
