<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@color/green_background">


    <View
        android:id="@+id/underText"
        android:layout_width="match_parent"
        android:layout_height="270sp"
        android:layout_below="@id/logoImage"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/view" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/underText"
        android:layout_marginHorizontal="35sp"
        android:layout_marginTop="-260sp"
        android:layout_marginBottom="0sp"
        android:backgroundTint="@color/green_textColor"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/green_textColor"
        android:textColorHint="@color/green_textColor"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="35sp"
        android:layout_marginTop="0sp"
        android:backgroundTint="@color/green_textColor"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/green_textColor"
        android:textSize="26sp" />

    <Button
        android:id="@+id/forgotPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="190sp"
        android:layout_marginTop="-15sp"
        android:layout_marginRight="0sp"
        android:backgroundTint="@color/green_underText"
        android:fontFamily="@font/roboto_regular"
        android:freezesText="false"
        android:stateListAnimator="@null"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/green_textColor"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="160sp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/green_for_buttonGO"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/go"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/createAccount"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/go"
        android:layout_marginHorizontal="117sp"
        android:layout_marginTop="-5dp"
        android:backgroundTint="@color/green_underText"
        android:fontFamily="@font/roboto_regular"
        android:stateListAnimator="@null"
        android:text="@string/createAccount"
        android:textAllCaps="false"
        android:textColor="@color/green_textColor"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/cityImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-103dp"
        app:srcCompat="@drawable/city_image" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_marginLeft="-20sp"
        android:layout_marginTop="-70sp"
        app:srcCompat="@drawable/logo_image" />

</RelativeLayout>